2004-08-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b103

	* Change: Support the new-style phpnuke embedding (no 'modload' passed)

	* Change: Correct the sample phpnuke random block

2004-08-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b102

	* Add: block-Random_Image.php.sample for phpnuke

	* Change: Added gpl.txt to phpBB2/modules.php

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b101

        * Fix: Print fatal error message instead of obscure PHP error
          when userDB fails to init before we try and use it.

	* Change: Print the correct graphics package path in check_imagemagick.php

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b100

	* Change: Add 'properties' link to the main page for 
	  each root album

	* Change: Make 'apply to subalbums' text clickable

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b99

	* Fix: $i got removed from makeGalleryUrl()

	* Change: check isset() on request vars in index.php

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b98

	* Change: Make several files ready for register_globals
	  photo_owner
	  search
	  user_preferences
	  index

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b97

        * Fix: numAccessibleItems was incorrectly checking isHiddenRecurse()
          for albums.  It needed to just be isHidden()

2004-08-08  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b96

	* New: Delete of multiple users.
	
	* Changed: Added possibility to transport an array via makeGalleryUrl

	* Change: Comment out a button disabling due to JS error.
	  Note: This needs to be fixed correctly !

2004-08-06  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b95

        * Fix: Prevent foreach() error from being displayed when previewing
          watermark previews.

        * Fix: Logging into Gallery as a non-admin and then trying to reset