@@ -1,3 +1,9 @@
+2004-08-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b104
+
+	* Change:  Porting a missed fix forward - 
+	  phpBB2/modules.php needs to extract variables even when register_globals
+	  is enabled.
+
 2004-08-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b103
 
 	* Change: Support the new-style phpnuke embedding (no 'modload' passed)
